--- a/src/components/explore/DiscoverSection.module.scss
+++ b/src/components/explore/DiscoverSection.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-bottom: 60px;
 }
 .titlesWrapper {
   display: flex;
@@ -35,8 +36,7 @@
   background-color: white;
   padding: 20px;
   border-radius: 20px;
-  box-shadow: 0px 0px 10px rgb(232, 232, 232);
-}
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;}
 
 .selectMenu {
   background-color: white;
