--- a/src/components/explore/PopularArtSection.module.scss
+++ b/src/components/explore/PopularArtSection.module.scss
@@ -1,7 +1,8 @@
 .popularArtSectionContainer {
-  padding: 20px;
+  padding: 60px 0px;
   display: flex;
   flex-direction: column;
+  background-color: #ede7fe;
   gap: 15px;
 }
 
@@ -17,34 +18,32 @@
 .subTitle {
   color: #666;
 }
-.cardsScrollWrapper{
-display: flex;
-justify-content: center;
+.cardsScrollWrapper {
+  display: flex;
+  justify-content: center;
   margin-bottom: 15px;
   width: 100%;
 }
 
 .cardsWrapper {
   display: flex;
+  padding: 10px;
   gap: 10px;
   overflow-x: auto !important; /* Enable horizontal scroll */
   overflow-y: hidden;
   scrollbar-width: none; /* Firefox */
   -ms-overflow-style: none; /* IE and Edge */
   &::-webkit-scrollbar {
-      display: none; /* Chrome, Safari, and Opera */
+    display: none; /* Chrome, Safari, and Opera */
   }
-
-
 }
-
 
 .card {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 10px 15px;
-   border-radius: 20px;
+  border-radius: 20px;
   width: 180px;
   min-width: 180px;
   white-space: nowrap;
@@ -53,17 +52,14 @@ justify-content: center;
   margin-bottom: 5px;
   border: 1px solid transparent;
   box-shadow: 0px 3px transparent;
-
 }
-
-
 
 .filterIcon {
   display: flex;
   margin-left: 10px;
   align-items: center;
   justify-content: center;
- background-color: white;
+  background-color: white;
 
   border-radius: 50%;
   width: 30px;
@@ -71,11 +67,11 @@ justify-content: center;
 }
 
 .selected {
-  border: 1px solid #000 ;
+  border: 1px solid #000;
   box-shadow: 0px 3px black;
   transition: 0.5s;
 }
-.cardImg{
+.cardImg {
   width: 18px;
   height: 18px;
   object-fit: contain;
