--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,3 +4,13 @@ body {
 .conatiner {
   padding: 0px 80px;
 }
+.signup-page-bg{
+  height: 100vh;
+  width: 100%;
+  padding-top: 100px;
+  background-image: url("/images/loginbg.png"); /* Path to your image */
+  background-size: contain; /* Adjust as needed: cover, contain, etc. */
+  background-repeat: no-repeat; /* Prevent image from repeating */
+  background-position: center bottom; /* Optional: Position the background image */
+
+}
