--- a/src/components/home/MovingPlans.module.scss
+++ b/src/components/home/MovingPlans.module.scss
@@ -9,7 +9,7 @@
   }
   
   .movingText {
-    color: #BDB2FF; /* Change to your desired text color */
+    color: #B4A7FF; /* Change to your desired text color */
     margin-right: 30px; /* Space between text and icon */
     margin-left: 30px;
     font-size: 130px;
