--- a/src/components/home/Card.module.scss
+++ b/src/components/home/Card.module.scss
@@ -1,52 +1,73 @@
 .productCard {
-    background-color: #C8E3FE;
-    border-radius: 12px;
-    padding: 15px;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-     
-  }
-  
-  .imageContainer {
-    position: relative;
-      border-radius: 12px;
-      overflow: hidden;
-  
-  }
-  
-  .productImage {
-    width: 100%;
-    height: 200px;
-  
-    object-fit: contain;
-  }
-  .inStock {
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      background-color: #E7FC93;
-      padding: 5px 10px;
-      border-radius: 8px;
-      font-size: 0.8rem;
-      color: #111;
-      z-index: 1;
-  
-  }
-  .productDetails {
-    margin-top: 10px;
-  }
-  
-  .productTitle {
-    font-size: 1.1rem;
-    margin-bottom: 5px;
-  }
-  
-  .productPrice {
-    font-size: 1rem;
-    margin-top: 5px;
-    color: black;
-    margin-bottom: 0px;
-  }
-  .productCat{
-      color: gray;
-      margin-bottom: 5px;
-  }
+  background-color: #c8e3fe;
+  border-radius: 12px;
+  padding: 15px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  position: relative; /* Required for the hover effect */
+  overflow: hidden; /* Ensure the gradient doesn't overflow */
+  transition: background-color 0.3s ease; /* Smooth background color transition */
+}
+
+.productCard::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: linear-gradient(to top, #a0d6ff, #c8e3fe);
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  z-index: -1; /* Place the gradient behind the content */
+}
+
+.productCard:hover {
+  background-color: #a0d6ff; /* Set a solid hover background before animation*/
+}
+
+.productCard:hover::before {
+  opacity: 1;
+}
+
+.imageContainer {
+  position: relative;
+  border-radius: 12px;
+  overflow: hidden;
+}
+
+.productImage {
+  width: 100%;
+  height: 200px;
+
+  object-fit: contain;
+}
+.inStock {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  background-color: #e7fc93;
+  padding: 5px 10px;
+  border-radius: 8px;
+  font-size: 0.8rem;
+  color: #111;
+  z-index: 1;
+}
+.productDetails {
+  margin-top: 10px;
+}
+
+.productTitle {
+  font-size: 1.1rem;
+  margin-bottom: 5px;
+}
+
+.productPrice {
+  font-size: 1rem;
+  margin-top: 5px;
+  color: black;
+  margin-bottom: 0px;
+}
+.productCat {
+  color: gray;
+  margin-bottom: 5px;
+}
