--- a/src/components/home/HeroSection.module.scss
+++ b/src/components/home/HeroSection.module.scss
@@ -60,7 +60,7 @@
     }
     
     .custom-arrow:hover .arrow-icon{
-    color: #885201;
+    color: #7E54F6;
     
       background-color: #f2f2f289 !important;
     }
