--- a/src/components/Header/CartDrawer.module.scss
+++ b/src/components/Header/CartDrawer.module.scss
@@ -4,7 +4,10 @@
     justify-content: space-between; // Space between title and close icon
     align-items: center; // Center vertically
     // padding: 20px; // Add padding for the header
-    margin-bottom: 20px;
+    margin-bottom: 30px;
+    border-bottom: 1px solid black;
+    // background-color: #e0e0e0;
+    padding-bottom: 20px;
   }
   
   .customCloseIcon {
@@ -30,4 +33,27 @@
       background-color: #d0d0d0;
     }
   }
+  .drawerContent{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+    // background-color: #666;
+}
+.drawerBottom{
+  display: flex;
+  justify-content: space-between;
+   align-items: center;
+   margin-top: 30px;
+   border-top: 1px solid black;
+   // background-color: #e0e0e0;
+   padding-top: 20px;
+   &b{
+    margin-left: 10px;
+    font-size: 18px;
+   }
+}
+.CheckoutBottom{
+  width: 200px;
+}
  
