--- a/src/components/Header/CartItem.module.scss
+++ b/src/components/Header/CartItem.module.scss
@@ -51,6 +51,7 @@
     margin-right: 10px;
     padding: 3px;
     margin-top: 9px;
+    background-color: white;
 }
 
 .quantityButton {
@@ -60,6 +61,7 @@
     width: 30px;
     height: 30px;
     border-radius: 50%;
+
     padding: 0;
     background-color: transparent;
     border: none;
@@ -110,3 +112,5 @@
         cursor: pointer;
     }
 }
+
+
