--- a/src/components/checkout/CheckoutForm.module.scss
+++ b/src/components/checkout/CheckoutForm.module.scss
@@ -3,7 +3,7 @@
 }
 
 .checkoutFormWrapper {
-  padding: 20px;
+  padding: 30px;
   border-radius: 20px;
   background-color: white;
 }
@@ -47,8 +47,24 @@
     margin-right: 20px;
   }
 }
-.priceText{
-  padding:0px 10px;
+.priceText {
+  padding: 0px 10px;
   display: flex;
   justify-content: space-between;
+}
+.orderConfirmationContainer {
+  display: flex;
+  justify-content: center;
+}
+.orderConfirmationContainer2 {
+  display: flex;
+  justify-content: center;
+}
+.orderConfirmationContainer2 {
+  max-width: 700px;
+  width: 100%;
+
+  .checkoutFormWrapper {
+    width: 100%;
+  }
 }
