--- a/src/components/home/HeroSection.module.scss
+++ b/src/components/home/HeroSection.module.scss
@@ -1,118 +1,121 @@
 .popularArtSectionContainer {
-    padding: 30px;
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-      position: relative;
-  
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  position: relative;
+}
+
+.titlesWrapper {
+  margin-bottom: 10px;
+}
+
+.mainTitle {
+  margin-bottom: -20px !important;
+  font-size: 80px !important;
+  width: 750px;
+  height: 360px;
+  font-weight: 400 !important;
+  padding: 20px 0px 0px 20px;
+  background: url("/backgournds/home-1.png") no-repeat center/cover;
+  span {
+    font-family: var(--font-lora), serif !important;
+    display: inline-block; /* Needed for transform */
+    transform: skewX(-5deg); /* Skews text by 20 degrees */
   }
-  
-  .titlesWrapper {
-    margin-bottom: 10px;
+}
+
+.subTitle {
+  color: #666;
+}
+.carouselWrapper {
+  margin-bottom: 15px;
+  width: 100%;
+}
+.card {
+  padding: 10px;
+  position: relative;
+}
+
+.cardImage {
+  width: 100%;
+  height: auto;
+  // height: 100px;
+  object-fit: contain;
+  margin: 0;
+  padding: 0;
+}
+
+.label {
+  margin-top: auto;
+  bottom: 30px;
+  left: 30px;
+  position: absolute;
+}
+.custom-arrow {
+  z-index: 1;
+  color: transparent;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: transparent !important;
+  padding: 0px;
+  height: 60px;
+  cursor: pointer;
+  transition: color 0.3s ease, transform 0.3s ease, background-color 0.3s ease;
+}
+
+.custom-arrow:hover .arrow-icon {
+  color: #7e54f6;
+
+  background-color: #f2f2f289 !important;
+}
+.custom-arrow:active {
+  color: black !important ;
+  transform: scale(1.2);
+}
+
+.arrow-icon {
+  margin-top: 2px;
+  font-size: 30px !important; /* Adjust icon size */
+}
+
+.custom-arrow.custom-next {
+  color: black;
+  transform: scale(1.2);
+  background-color: #f5f5f5;
+  top: 50%;
+  transform: translateY(-50%);
+  right: -10px;
+}
+.custom-arrow.custom-prev {
+  color: black;
+  transform: scale(1.2);
+  background-color: #f5f5f5;
+  top: 50%;
+  transform: translateY(-50%);
+  left: -10px;
+  border-radius: 0px;
+}
+.custom-arrow.custom-prev:hover,
+.custom-arrow.custom-next:hover {
+  background-color: black;
+  transform: scale(1.2);
+  color: #f5f5f5;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.disabled {
+  opacity: 0.5; /* Adjust opacity for disabled state */
+  pointer-events: none;
+}
+
+@media (max-width: 500px) {
+  .custom-arrow.custom-next {
+    right: 0px;
   }
-  
-  .mainTitle {
-    margin-bottom: 5px !important;
-    font-size: 60px  !important;
-    width: 400px;
+  .custom-arrow.custom-prev {
+    left: 0px;
   }
-  
-  .subTitle {
-    color: #666;
-  }
-  .carouselWrapper {
-    margin-bottom: 15px;
-    width: 100%;
-  
-  }
-  .card{
-    padding: 10px;
-    position: relative;
-  }
-  
-  .cardImage {
-    width: 100%;
-    height: auto;
-    // height: 100px;
-    object-fit: contain;
-    margin: 0;
-    padding: 0;
-  }
-  
-  .label {
-    margin-top: auto;
-    bottom: 30px;
-    left: 30px;
-    position: absolute;
-  }
-  .custom-arrow {
-      z-index: 1;
-      color: transparent;
-      position: absolute;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background-color: transparent !important;
-      padding: 0px;
-      height: 60px;
-      cursor: pointer;
-      transition: color 0.3s ease, transform 0.3s ease, background-color 0.3s ease;
-    }
-    
-    .custom-arrow:hover .arrow-icon{
-    color: #7E54F6;
-    
-      background-color: #f2f2f289 !important;
-    }
-    .custom-arrow:active {
-      color:black !important ;
-      transform: scale(1.2);
-    }
-    
-    
-    .arrow-icon {
-      margin-top: 2px;
-      font-size: 30px !important; /* Adjust icon size */
-    }
-  
-    .custom-arrow.custom-next {
-      color: black;
-      transform: scale(1.2);
-      background-color: #f5f5f5;
-      top: 50%;
-      transform: translateY(-50%);
-      right: -10px;
-    }
-    .custom-arrow.custom-prev {
-      color: black;
-      transform: scale(1.2);
-      background-color: #f5f5f5;
-      top: 50%;
-      transform: translateY(-50%);
-      left: -10px;
-      border-radius: 0px;
-  
-    }
-    .custom-arrow.custom-prev:hover,
-    .custom-arrow.custom-next:hover {
-      background-color: black;
-      transform: scale(1.2);
-      color: #f5f5f5;
-      top: 50%;
-      transform: translateY(-50%);
-    }
-    .disabled {
-      opacity: 0.5; /* Adjust opacity for disabled state */
-      pointer-events: none;
-    }
-    
-    @media (max-width: 500px) {
-      .custom-arrow.custom-next {
-    
-        right: 0px;
-      }
-      .custom-arrow.custom-prev {
-     
-        left: 0px;
-      }
-    }
+}
