--- a/src/components/home/OurCollection.module.scss
+++ b/src/components/home/OurCollection.module.scss
@@ -15,12 +15,13 @@
 }
 
 .title {
-    font-size: 2rem;
+    font-size: 50px;
     margin-bottom: 5px;
 }
 
 .subtitle {
-    color: #666;
+ 
+    margin-left: 5px;
 }
 
 .viewAllButton {
