--- a/src/components/home/MovingPlans.module.scss
+++ b/src/components/home/MovingPlans.module.scss
@@ -1,31 +1,36 @@
 .movingPlansContainer {
-    display: flex;
-    align-items: center;
-    white-space: nowrap; /* Prevent text from wrapping */
-    animation: moveText 20s linear infinite; /* Adjust duration as needed */
-    font-size: 2.5rem;
-    margin-top: 50px;
+  display: flex;
+  align-items: center;
+  white-space: nowrap; /* Prevent text from wrapping */
+  animation: moveText 20s linear infinite; /* Adjust duration as needed */
+  font-size: 2.5rem;
+  margin-top: 50px;
+}
 
+.movingText {
+  color: #b4a7ff; /* Change to your desired text color */
+  margin-right: 30px; /* Space between text and icon */
+  margin-left: 30px;
+  font-size: 200px;
+  display: inline-block; /* Needed for transform */
+  transform: skewX(-5deg); /* Skews text by 20 degrees */
+
+  font-family: var(--font-lora), serif !important;
+}
+
+.movingIcon {
+  margin-top: 20px;
+  width: 140px;
+  height: 140px;
+}
+
+@keyframes moveText {
+  0% {
+    transform: translateX(-100%); /* Start off-screen to the left */
   }
-  
-  .movingText {
-    color: #B4A7FF; /* Change to your desired text color */
-    margin-right: 30px; /* Space between text and icon */
-    margin-left: 30px;
-    font-size: 130px;
-    font-family: cursive;
+  100% {
+    transform: translateX(
+      0%
+    ); /* End position is to be at the edge of the parent component*/
   }
-  
-  .movingIcon {
-  width: 130px;
-  height: 130px;
-  }
-  
-  @keyframes moveText {
-       0% {
-         transform: translateX(-100%); /* Start off-screen to the left */
-       }
-       100% {
-         transform: translateX(0%); /* End position is to be at the edge of the parent component*/
-       }
-  }
+}
