--- a/src/components/FAQSection/FAQSection.module.scss
+++ b/src/components/FAQSection/FAQSection.module.scss
@@ -57,8 +57,16 @@
     font-size: 40px;
     // text-align: center;
 
-   
     font-family: 400;
+  }
+  .faqTitle2 {
+    // font-family:sans-serif  !important;
+    font-weight: 400;
+    font-size: 60px;
+    // text-align: center;
+  }
+  .faqTitleText{
+    width: 180px;
   }
 
   .faqCollapse {
@@ -99,14 +107,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 40px;
-  height: 40px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
 
   background-color: #ede7fe;
   color: #333;
-  margin-right: 20px;
-  font-size: 18px;
+  margin: 20px 20px 20px 0px;
+  font-size: 16px;
   border: 1px solid black;
   box-shadow: 2px 2px black;
 }
@@ -115,7 +123,9 @@
   color: black !important;
 }
 .answerPanel {
-  margin-left: 70px;
+  margin-left: 80px;
+  margin-right: 80px;
   margin-bottom: 0px;
-  margin-top: -20px;
+  font-size: 14px;
+  margin-top: -40px;
 }
