--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -17,7 +17,7 @@ body {
   background-image: url("/backgournds/plans-bg.png"); /* Path to your image */
   background-size: contain; /* Adjust as needed: cover, contain, etc. */
   background-repeat: no-repeat; /* Prevent image from repeating */
-  background-position: center bottom; /* Optional: Position the background image */
+  background-position: center center; /* Optional: Position the background image */
 
   padding: 220px 0px;
   margin-top: 40px;
