--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -49,7 +49,8 @@ body {
   border-radius: 0px !important;
 }
 .my-slider .ant-menu-item.ant-menu-item-selected {
-  border-color: #7e54f6;
+  /* border-color: #7e54f6; */
+  background-color: transparent !important;
 }
 .my-slider {
   background-color: #f2f2f2;
@@ -63,3 +64,4 @@ body {
 .ant-input-outlined{
 border-color: gray !important;
 }
+
