--- a/src/components/ContactUs/ContactForm.module.scss
+++ b/src/components/ContactUs/ContactForm.module.scss
@@ -14,7 +14,6 @@
   display: flex;
   justify-content: center;
 
-
   border-radius: 20px;
   width: 100%;
   margin-bottom: 50px;
@@ -22,7 +21,7 @@
 .formWrapper2 {
   padding: 20px;
   border-radius: 20px;
-  background: #dadada;
+  background: #ffffff;
 }
 .contactForm {
   width: 500px;
