--- a/src/components/Header/CartItem.module.scss
+++ b/src/components/Header/CartItem.module.scss
@@ -1,118 +1,183 @@
 // src/components/CartItem.module.scss
 .cartItem {
-    display: flex;
-    align-items: center;
-    margin-bottom: 20px;
-    padding: 15px;
-    
-    border-radius: 20px;
-  
-    .itemImage {
-      width: 80px;
-      height: 80px;
-      object-fit: contain;
-      border-radius: 5px;
-      margin-right: 10px;
-    }
-  
-    .itemDetails {
-      display: flex;
-      justify-content: space-between;
-      align-items: flex-end;
-      width: 100%;
-  
-      .itemTitle {
-        font-size: 1.2rem;
-        margin: 0;
-        margin-bottom: 10px;
-      }
-  
-      .itemPrice {
-        font-size: 1rem;
-  
-      }
-  
-      .itemQuantity {
-        font-size: 0.9rem;
-        color: #666;
-      }
-    }
+  display: flex;
+  // align-items: center;
+  margin-bottom: 20px;
+  padding: 15px;
+
+  border-radius: 20px;
+
+  .itemImage {
+    width: 90px;
+    height: 90px;
+    padding: 10px;
+    object-fit: contain;
+    border-radius: 15px;
+    margin-right: 10px;
+    background-color: white;
   }
 
-  .quantitySelector {
+  .itemDetails {
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    border: 1px solid #111;
-    border-radius: 25px;
-    overflow: hidden;
-    width: 130px;
-    margin-right: 10px;
-    padding: 3px;
-    // margin-top: 9px;
-    background-color: white;
+    align-items: flex-end;
+    width: 100%;
+
+    .itemTitle {
+      font-size: 1.2rem;
+      margin: 0;
+      margin-bottom: 10px;
+    }
+
+    .itemPrice {
+      font-size: 1.2rem;
+      font-family: var(--font-lora) !important;
+      display: inline-block; /* Needed for transform */
+      transform: skewX(-3deg); /* Skews text by 20 degrees */
+    }
+
+    .itemQuantity {
+      font-size: 0.9rem;
+      color: #666;
+    }
+  }
+}
+
+.quantitySelector {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border: 1px solid #111;
+  border-radius: 25px;
+  overflow: hidden;
+  width: 130px;
+  margin-right: 10px;
+  padding: 3px;
+  // margin-top: 9px;
+  background-color: white;
 }
 
 .quantityButton {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
 
-    padding: 0;
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-    background-color: rgba(126, 84, 246, 0.2);
-    transition: background-color 0.2s;
-    &:focus {
-      outline: none;
+  padding: 0;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  background-color: rgba(126, 84, 246, 0.2);
+  transition: background-color 0.2s;
+  &:focus {
+    outline: none;
+  }
+  &:hover {
+    background-color: rgba(103, 67, 200, 0.2);
+    .minus,
+    .plus {
+      color: #7e54f6;
     }
-    &:hover {
-      background-color: rgba(103, 67, 200, 0.2);
-      .minus,
-      .plus {
-        color: #7e54f6;
-      }
-    }
+  }
 
-    &:active {
-      background-color: rgba(126, 84, 246, 0.4);
-    }
+  &:active {
+    background-color: rgba(126, 84, 246, 0.4);
+  }
 }
 
 .quantityValue {
-    font-size: 1.2rem;
-    padding: 0 15px;
-    user-select: none;
-    min-width: 15px;
-    text-align: center;
+  font-size: 1.2rem;
+  padding: 0 15px;
+  user-select: none;
+  min-width: 15px;
+  text-align: center;
 }
 .minus,
 .plus {
-    font-size: 1.4rem;
-    color: black;
+  font-size: 1.4rem;
+  color: black;
 }
-.deleeIcon{
-    width: 38px;
-    height: 38px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid #111;
-    border-radius: 50%;
-    font-size: 20px;
-    &:hover{
-        background-color: black;
-        color: white;
-        transition: 0.5s;
-        cursor: pointer;
-    }
+.deleeIcon {
+  width: 38px;
+  height: 38px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #111;
+  border-radius: 50%;
+  font-size: 20px;
+  &:hover {
+    background-color: black;
+    color: white;
+    transition: 0.5s;
+    cursor: pointer;
+  }
 }
-.quantityContaner{
+.quantityContaner {
   display: flex;
   align-content: flex-end;
 }
 
+.quantitySelector2 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  // border: 1px solid #111;
+  border-radius: 25px;
+  overflow: hidden;
+  width: 120px;
+  margin-right: 10px;
+  padding: 3px;
+  // margin-top: 9px;
+  background-color: #ede7fe;
+}
+
+.quantityButton2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+
+  padding: 0;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  background-color: white;
+  transition: background-color 0.2s;
+  &:focus {
+    outline: none;
+  }
+  &:hover {
+    background-color: rgba(103, 67, 200, 0.2);
+    .minus2,
+    .plus2 {
+      color: #7e54f6;
+    }
+  }
+
+  &:active {
+    background-color: rgba(126, 84, 246, 0.4);
+  }
+}
+
+.quantityValue2 {
+  font-size: 1.2rem;
+  padding: 0 15px;
+  user-select: none;
+  min-width: 15px;
+  text-align: center;
+}
+.minus2,
+.plus2 {
+  font-size: 1.4rem;
+  color: black;
+}
+.smallTiitle {
+  font-size: 14px;
+  color: #a8a8a8;
+  margin-bottom: 10px;
+}
