--- a/src/components/Footer/footer.module.scss
+++ b/src/components/Footer/footer.module.scss
@@ -4,16 +4,17 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-image: url("/images/Union.png"); /* Path to your image */
-  background-size: contain; /* Adjust as needed: cover, contain, etc. */
+  background-image: url("/backgournds/footer-1-bg.png"); /* Path to your image */
+  background-size: 100% 100%; /* Adjust as needed: cover, contain, etc. */
   background-repeat: no-repeat; /* Prevent image from repeating */
   background-position: center; /* Optional: Position the background image */
+  margin-top: 100px;
 }
 
 .footerNav {
   display: flex;
   gap: 50px;
-  margin: 230px 0px 50px 0px;
+  margin: 140px 0px 50px 0px;
   align-items: center;
   justify-content: center;
 }
@@ -29,9 +30,14 @@
   color: #555;
 }
 .logo {
-  font-size: 230px;
-  margin: 20px 0px;
+  font-size: 210px;
+  margin: 0px 0px 110px 0px;
+  span {
+    font-family: var(--font-lora), serif !important;
+    display: inline-block; /* Needed for transform */
+    transform: skewX(-5deg); /* Skews text by 20 degrees */
+  }
 }
 .text {
-    margin: 50px 0px 200px 0px;
+  margin: 50px 0px 100px 0px;
 }
