--- a/src/components/explore/DiscoverSection.module.scss
+++ b/src/components/explore/DiscoverSection.module.scss
@@ -2,7 +2,15 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-bottom: 60px;
+  // padding: 100px 0px;
+  padding-top: 120px;
+  padding-bottom: 120px;
+  width: 100% !important;
+  height: auto !important;
+  background-image: url("/backgournds/explore-bg.png"); /* Path to your image */
+  background-size: 100% auto; /* Adjust as needed: cover, contain, etc. */
+  background-repeat: no-repeat; /* Prevent image from repeating */
+  // background-position: center bottom;
 }
 .titlesWrapper {
   display: flex;
@@ -11,12 +19,17 @@
   margin-bottom: 20px;
 }
 .mainTitle {
-  font-family: Georgia;
-  font-size: 80px;
+  margin-top: -50px;
+  font-size: 90px;
   text-align: center;
-  max-width: 700px;
-  margin: 2rem 0rem;
+  max-width: 710px;
   font-family: 400;
+  span {
+    font-family: var(--font-lora), serif !important;
+    display: inline-block; /* Needed for transform */
+    transform: skewX(-5deg); /* Skews text by 20 degrees */
+    font-size: 80px;
+  }
 }
 .secondaryTitle {
   font-family: serif;
@@ -36,12 +49,12 @@
   background-color: white;
   padding: 20px;
   border-radius: 20px;
-  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;}
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
 
 .selectMenu {
   background-color: white;
-  border: 1px solid #d9d9d9;
-  border-radius: 20px;
+  // border: 1px solid #d9d9d9;
 
   width: 200px;
 }
