--- a/src/components/explore/PopularCard.module.scss
+++ b/src/components/explore/PopularCard.module.scss
@@ -1,21 +1,26 @@
 .card {
-    position: relative;
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
-    border-radius: 10px;
-    transition: background-color 0.3s ease;
-    background-color: #fff;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  // border-radius: 10px;
+  transition: background-color 0.3s ease;
+  background-color: #fff;
 
-    &:hover {
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+ 
+}
+.cardMain1{
+  border: 7px solid white;
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 
-        .overlay {
-          opacity: 1;
-        }
+  &:hover {
 
+
+    .overlay {
+      opacity: 1;
     }
+  }
 }
 
 .image {
@@ -25,17 +30,17 @@
   padding: 20px;
   max-height: 300px;
   object-fit: contain;
-    transition: transform 0.3s ease;
+  transition: transform 0.3s ease;
 }
-
 
 .overlay {
   position: absolute;
+  border-radius: 10px;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(128, 128, 128, 0.5);
+  background-color: rgba(0, 0, 0, 0.4);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -44,11 +49,11 @@
   transition: opacity 0.3s ease;
 }
 
-.topIcons{
+.topIcons {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-    gap: 10px;
+  gap: 10px;
 }
 
 .icon {
@@ -56,48 +61,48 @@
   align-items: center;
   justify-content: center;
   border-radius: 50%;
-    // border:1px solid #000;
-    padding: 10px;
-    background-color: #fff;
+  // border:1px solid #000;
+  padding: 10px;
+  background-color: #fff;
 
   svg {
     font-size: 1em;
     color: #000;
   }
 }
-.iconHeart{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50%;
-      border:1px solid #000;
-      padding: 10px;
-      margin-right: -10px;
-      margin-left: 3px;
-      background-color: #fff;
-  
-    svg {
-      font-size: 1em;
-      color: #000;
-    }
+.iconHeart {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  border: 1px solid #000;
+  padding: 10px;
+  margin-right: -10px;
+  margin-left: 3px;
+  background-color: #fff;
+
+  svg {
+    font-size: 1em;
+    color: #000;
   }
+}
 
 .likeCount {
   background-color: #fff;
   border-radius: 20px;
-
+  font-weight: 400 !important;
   padding: 0px 10px;
   font-weight: bold;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  color:#000;
-    margin-left: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #000;
+  margin-left: auto;
 }
 
 .title {
   font-weight: bold;
   text-align: center;
   color: white;
-    margin-top: 25px;
+  margin-top: 25px;
 }
