--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -68,9 +68,13 @@ body {
   width: 100%;
 
   padding: 100px 0px;
-  margin: 100px 0px;
+  margin:100px 0px 0px 0px;
   background-image: url("/backgournds/contact-us-bg.png"); /* Path to your image */
-  background-size: cover; /* Adjust as needed: cover, contain, etc. */
+  background-size: 100% 100%; /* Adjust as needed: cover, contain, etc. */
+  /* Adjust as needed: cover, contain, etc. */
   background-repeat: no-repeat; /* Prevent image from repeating */
   background-position: center center;
+}
+.ant-select-single.ant-select-lg .ant-select-selector{
+border-radius: 30px !important;
 }
