--- a/src/components/Header/CartItem.module.scss
+++ b/src/components/Header/CartItem.module.scss
@@ -5,7 +5,7 @@
   margin-bottom: 20px;
   padding: 15px;
 
-  border-radius: 20px;
+  border-radius: 20px !important;
 
   .itemImage {
     width: 90px;
@@ -47,7 +47,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border: 1px solid #111;
+  // border: 1px solid #111;
   border-radius: 25px;
   overflow: hidden;
   width: 130px;
