--- a/src/components/productDetail/ProductImageGallery.module.scss
+++ b/src/components/productDetail/ProductImageGallery.module.scss
@@ -1,49 +1,61 @@
 .imageGallery {
-    display: flex;
-    flex-direction: column;
-      border: 1px solid #e0e0e0;
-    border-radius: 12px;
-      overflow: hidden;
-      padding: 20px;
-  }
-  
-  .mainImageContainer {
-      position: relative;
+  display: flex;
+  flex-direction: column;
+  border: 1px solid rgb(90, 90, 90);
+  border-radius: 20px;
+  overflow: hidden;
+  padding: 20px;
+  position: relative;
+}
 
-      height: 400px;
-      overflow: hidden;
-  }
-  
-  
-  .mainImage {
-    object-fit: contain;
-    width: 100%;
-    height: 100%;
-  }
-  
-  .thumbnailContainer {
-      display: flex;
-      justify-content: space-evenly;
-      align-items: center;
-      padding: 10px;
-  }
-  
+.mainImageContainer {
+  position: relative;
+
+  height: 400px;
+  overflow: hidden;
+}
+
+.mainImage {
+  object-fit: contain;
+  width: 100%;
+  height: 100%;
+}
+
+.thumbnailContainer {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  right: 10px;
+  bottom: 10px;
+  padding: 10px;
+
+}
+.active{
   .thumbnail {
-      position: relative;
-      width: 70px;
-    height: 70px;
-    border-radius: 10px;
-    overflow: hidden;
-    cursor: pointer;
-    opacity: 0.6;
-    transition: opacity 0.3s;
-    &:hover, &.selected{
-          opacity: 1;
-          box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
-      }
+    border: 1px solid  rgb(90, 90, 90);
   }
-  .thumbnail img{
-      object-fit: contain;
-      width: 100%;
-      height: 100%;
+}
+
+.thumbnail {
+  position: relative;
+  width: 80px;
+  height: 80px;
+  margin-top: 15px;
+  border-radius: 10px;
+  object-fit: contain;
+  background-color: #C8E3FE;
+  padding: 10px;
+  overflow: hidden;
+  cursor: pointer;
+
+  transition: opacity 0.3s;
+  &:hover,
+  &.selected {
+    opacity: 1;
   }
+}
+.thumbnail img {
+  object-fit: contain;
+  width: 100%;
+  height: 100%;
+}
